add http3 test